--- a/src/app/(public)/globals.css
+++ b/src/app/(public)/globals.css
@@ -12,60 +12,32 @@
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+@font-face {
+  font-family: "MyCustomFont";
+  src: url("/wallpaper/src/app/fonts/FiraSans-Black.ttf") format("woff2"),
+        url("/wallpaper/src/app/fonts/FiraSans-Black.ttf") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "MyCustomFont1";
+  src: url("/wallpaper/src/app/fonts/Montserrat-VariableFont_wght.ttf") format("woff2"),
+        url("/wallpaper/src/app/fonts/Montserrat-VariableFont_wght.ttf") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: "MyCustomFont2";
+  src: url("/wallpaper/src/app/fonts/ArchivoBlack-Regular.ttf") format("woff2"),
+        url("/wallpaper/src/app/fonts/ArchivoBlack-Regular.ttf") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  transition: background-color 0.3s, color 0.3s;
+  font-family: 'Arial', 'Helvetica', sans-serif;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-/* globals.css */
-table {
-  background-color: white;
-  color: black;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-th, td {
-  border: 1px solid #ccc;
-  padding: 8px;
-}
-
-@media (prefers-color-scheme: dark) {
-  table {
-    background-color: #111;
-    color: #eee;
-  }
-
-  th, td {
-    border: 1px solid #444; /* Lighter border for visibility in dark mode */
-  }
-}
-
-
